Fix layout issue with image size on mobile screen

--- a/landing/css/style.css
+++ b/landing/css/style.css
@@ -100,7 +100,7 @@ aside{
 	    background-repeat: no-repeat;
 	    background-size: 100%;
 	    width: 100%;
-	    height: 400px;
+	    height: 240px;
 	    display: block;
 	    max-height: 100%;
 	}
